--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: php
 php:
   - 5.6
   - 7
-  - hhvm
 
 env:
   global:
@@ -44,7 +43,7 @@ script:
 
   # Run phpunit tests
   - cd tests/Unit
-  - sh -c "if [ '$INTEGRATION' != '1' -a '$JSTESTS' != '1' -a '$CODECHECK' != '1' -a '$CODECHECK' != '2' ]; then phpunit --configuration phpunit.xml; fi"
+  - sh -c "if [ '$INTEGRATION' != '1' -a '$JSTESTS' != '1' -a '$CODECHECK' != '1' -a '$CODECHECK' != '2' ]; then ../../../../lib/composer/bin/phpunit --configuration phpunit.xml; fi"
   - cd ../..
 
   # Integration tests
