--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ php:
 
 env:
   global:
-    - CORE_BRANCH=master
+    - CORE_BRANCH=stable10
     - APP_NAME=notifications
   matrix:
     - DB=sqlite
@@ -76,8 +76,6 @@ matrix:
     - php: 5.6
       env: DB=mysql
     - php: 5.6
-      env: DB=mysql CORE_BRANCH=stable10
-    - php: 5.6
       env: DB=pgsql
     - php: 5.6
       env: DB=mysql CODECHECK=1
@@ -85,10 +83,18 @@ matrix:
       env: DB=mysql CODECHECK=2
     - php: 5.6
       env: DB=mysql INTEGRATION=1
-    - php: 5.6
-      env: DB=mysql INTEGRATION=1 CORE_BRANCH=stable10
-#    - php: 5.4
-#      env: DB=mysql;JSTESTS=1
+    - php: 7.1
+      env: DB=oracle CORE_BRANCH=master
+    - php: 7.1
+      env: DB=mysql CORE_BRANCH=master
+    - php: 7.1
+      env: DB=pgsql CORE_BRANCH=master
+    - php: 7.1
+      env: DB=mysql CODECHECK=1 CORE_BRANCH=master
+    - php: 7.1
+      env: DB=mysql CODECHECK=2 CORE_BRANCH=master
+    - php: 7.1
+      env: DB=mysql INTEGRATION=1 CORE_BRANCH=master
   allow_failures:
     - env: DB=mysql;CODECHECK=2
   fast_finish: true
