--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ php:
 
 env:
   global:
-    - CORE_BRANCH=master
+    - CORE_BRANCH=stable10
     - APP_NAME=notifications
   matrix:
     - DB=sqlite
@@ -74,8 +74,6 @@ matrix:
     - php: 5.6
       env: DB=mysql
     - php: 5.6
-      env: DB=mysql CORE_BRANCH=stable10
-    - php: 5.6
       env: DB=pgsql
     - php: 5.6
       env: DB=mysql CODECHECK=1
@@ -83,8 +81,6 @@ matrix:
       env: DB=mysql CODECHECK=2
     - php: 5.6
       env: DB=mysql INTEGRATION=1
-    - php: 5.6
-      env: DB=mysql INTEGRATION=1 CORE_BRANCH=stable10
 #    - php: 5.4
 #      env: DB=mysql;JSTESTS=1
   allow_failures:
