--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -9,12 +9,11 @@ default:
       contexts:
         - NotificationsContext:
             baseUrl:  http://localhost:8080/ocs/
-            admin:
-              - admin
-              - admin
-            regular_user_password: 123456
-            mailhog_url: http://127.0.0.1:8025/api/v2/messages
-            oc_path: ../../../../
+            adminUsername: admin
+            adminPassword: admin
+            regularUserPassword: 123456
+            mailhogUrl: http://127.0.0.1:8025/api/v2/messages
+            ocPath: ../../../../
 
   extensions:
       jarnaiz\JUnitFormatter\JUnitFormatterExtension:
