--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -9,7 +9,7 @@ default:
       contexts:
         - NotificationsContext:
         - FeatureContext: &common_feature_context_params
-            baseUrl:  http://localhost:8080/ocs/
+            baseUrl:  http://localhost:8080
             adminUsername: admin
             adminPassword: admin
             regularUserPassword: 123456
