--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -8,6 +8,7 @@ default:
         - %paths.base%/../features/apiNotifications
       contexts:
         - NotificationsContext:
+        - EmailContext:
         - FeatureContext: &common_feature_context_params
             baseUrl:  http://localhost:8080
             adminUsername: admin
