--- a/.drone.yml
+++ b/.drone.yml
@@ -118,6 +118,15 @@ pipeline:
         PHP_VERSION: 7.1
         DB_TYPE: mysql
 
+  notify:
+    image: plugins/slack:1
+    pull: true
+    secrets: [ slack_webhook ]
+    channel: builds
+    when:
+      status: [ failure, changed ]
+      event: [ push, tag ]
+
 services:
   mysql:
     image: mysql:5.5
