Add stable10 to branches list to match with yml in stable10

--- a/.drone.yml
+++ b/.drone.yml
@@ -2,7 +2,7 @@ workspace:
   base: /var/www/owncloud
   path: apps/notifications
 
-branches: [master, release*, release/*]
+branches: [master, stable10, release*, release/*]
 
 pipeline:
   install-server:
