Add WebUIGeneralContext needed by EmailContext

--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -16,6 +16,7 @@ default:
             adminPassword: admin
             regularUserPassword: 123456
             ocPath: apps/testing/api/v1/occ
+        - WebUIGeneralContext:
 
     webUINotifications:
       paths:
