--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ nbproject
 /tests/Unit/coverage*
 /tests/Unit/clover.xml
 /tests/Unit/js/node_modules
+/tests/output
 
 /tests/acceptance/composer.lock
 /tests/acceptance/output
