--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,13 @@ nbproject
 .well-known
 /.buildpath
 
+.php_cs.cache
+
+# Composer
+vendor/
+vendor-bin/**/vendor
+vendor-bin/**/composer.lock
+
 # Tests - auto-generated files
 /tests/Unit/coverage*
 /tests/Unit/clover.xml
