--- a/.drone.yml
+++ b/.drone.yml
@@ -94,6 +94,20 @@ pipeline:
       matrix:
         TEST_SUITE: api-acceptance
 
+  cli-acceptance-tests:
+    image: owncloudci/php:${PHP_VERSION}
+    pull: true
+    environment:
+      - TEST_SERVER_URL=http://owncloud
+      - PLATFORM=Linux
+      - BEHAT_SUITE=${BEHAT_SUITE}
+      - APPS_TO_ENABLE=notifications
+    commands:
+      - make test-acceptance-cli
+    when:
+      matrix:
+        TEST_SUITE: cli-acceptance
+
   phpunit-tests:
     image: owncloudci/php:${PHP_VERSION}
     pull: true
@@ -338,6 +352,36 @@ matrix:
       NEED_INSTALL_APP: true
       NEED_SERVER: true
 
+    - PHP_VERSION: 7.1
+      OC_VERSION: daily-master-qa
+      TEST_SUITE: cli-acceptance
+      BEHAT_SUITE: cliNotifications
+      DB_TYPE: mysql
+      DB_NAME: owncloud
+      NEED_CORE: true
+      NEED_INSTALL_APP: true
+      NEED_SERVER: true
+
+    - PHP_VERSION: 7.1
+      OC_VERSION: daily-master-qa
+      TEST_SUITE: cli-acceptance
+      BEHAT_SUITE: cliNotifications
+      DB_TYPE: pgsql
+      DB_NAME: owncloud
+      NEED_CORE: true
+      NEED_INSTALL_APP: true
+      NEED_SERVER: true
+
+    - PHP_VERSION: 7.1
+      OC_VERSION: daily-master-qa
+      TEST_SUITE: cli-acceptance
+      BEHAT_SUITE: cliNotifications
+      DB_TYPE: oci
+      DB_NAME: XE
+      NEED_CORE: true
+      NEED_INSTALL_APP: true
+      NEED_SERVER: true
+
     - PHP_VERSION: 5.6
       OC_VERSION: daily-stable10-qa
       TEST_SUITE: web-acceptance
@@ -392,6 +436,36 @@ matrix:
       OC_VERSION: daily-stable10-qa
       TEST_SUITE: api-acceptance
       BEHAT_SUITE: apiNotifications
+      DB_TYPE: oci
+      DB_NAME: XE
+      NEED_CORE: true
+      NEED_INSTALL_APP: true
+      NEED_SERVER: true
+
+    - PHP_VERSION: 5.6
+      OC_VERSION: daily-stable10-qa
+      TEST_SUITE: cli-acceptance
+      BEHAT_SUITE: cliNotifications
+      DB_TYPE: mysql
+      DB_NAME: owncloud
+      NEED_CORE: true
+      NEED_INSTALL_APP: true
+      NEED_SERVER: true
+
+    - PHP_VERSION: 5.6
+      OC_VERSION: daily-stable10-qa
+      TEST_SUITE: cli-acceptance
+      BEHAT_SUITE: cliNotifications
+      DB_TYPE: pgsql
+      DB_NAME: owncloud
+      NEED_CORE: true
+      NEED_INSTALL_APP: true
+      NEED_SERVER: true
+
+    - PHP_VERSION: 5.6
+      OC_VERSION: daily-stable10-qa
+      TEST_SUITE: cli-acceptance
+      BEHAT_SUITE: cliNotifications
       DB_TYPE: oci
       DB_NAME: XE
       NEED_CORE: true
