--- a/tests/acceptance/config/behat.yml
+++ b/tests/acceptance/config/behat.yml
@@ -1,11 +1,11 @@
 default:
   autoload:
-     '': %paths.base%/../features/bootstrap
+     '': '%paths.base%/../features/bootstrap'
 
   suites:
     apiNotifications:
       paths:
-        - %paths.base%/../features/apiNotifications
+        - '%paths.base%/../features/apiNotifications'
       contexts:
         - NotificationsContext:
         - NotificationsCoreContext:
@@ -19,7 +19,7 @@ default:
 
     webUINotifications:
       paths:
-        - %paths.base%/../features/webUINotifications
+        - '%paths.base%/../features/webUINotifications'
       contexts:
         - NotificationsContext:
         - NotificationsCoreContext:
@@ -30,7 +30,7 @@ default:
 
     cliNotifications:
       paths:
-        - %paths.base%/../features/cliNotifications
+        - '%paths.base%/../features/cliNotifications'
       contexts:
         - NotificationsContext:
         - NotificationsCoreContext:
@@ -40,4 +40,4 @@ default:
   extensions:
       jarnaiz\JUnitFormatter\JUnitFormatterExtension:
           filename: report.xml
-          outputDir: %paths.base%/../output/
+          outputDir: '%paths.base%/../output/'
