Run tests against latest stable release tarball

--- a/.drone.yml
+++ b/.drone.yml
@@ -18,6 +18,19 @@ pipeline:
       matrix:
         NEED_CORE: true
 
+  install-testrunner:
+    image: owncloudci/php:${PHP_VERSION}
+    pull: true
+    commands:
+      - git clone -b stable10 --depth=1 https://github.com/owncloud/core.git /var/www/owncloud/testrunner
+      - cp -r /var/www/owncloud/apps/notifications /var/www/owncloud/testrunner/apps/
+      - cd /var/www/owncloud/testrunner
+      - make install-composer-deps
+      - make vendor-bin-deps
+    when:
+      matrix:
+        USE_RELEASE_TARBALL: true
+
   install-app:
     image: owncloudci/php:${PHP_VERSION}
     pull: true
@@ -56,8 +69,14 @@ pipeline:
     pull: true
     commands:
       - chown www-data /var/www/owncloud -R
-      - chmod 777 /var/www/owncloud/tests/acceptance/filesForUpload -R
-      - chmod +x /var/www/owncloud/tests/acceptance/run.sh
+      - if [ "${USE_RELEASE_TARBALL}" = "true" ];
+        then
+        chmod 777 /var/www/owncloud/testrunner/tests/acceptance/filesForUpload -R;
+        chmod +x /var/www/owncloud/testrunner/tests/acceptance/run.sh;
+        else
+        chmod 777 /var/www/owncloud/tests/acceptance/filesForUpload -R;
+        chmod +x /var/www/owncloud/tests/acceptance/run.sh;
+        fi
     when:
       matrix:
         NEED_SERVER: true
@@ -74,6 +93,7 @@ pipeline:
       - BEHAT_SUITE=${BEHAT_SUITE}
       - APPS_TO_ENABLE=notifications
     commands:
+      - if [ "${USE_RELEASE_TARBALL}" = "true" ]; then cd /var/www/owncloud/testrunner/apps/notifications; fi
       - make test-acceptance-webui
     when:
       matrix:
@@ -88,6 +108,7 @@ pipeline:
       - BEHAT_SUITE=${BEHAT_SUITE}
       - APPS_TO_ENABLE=notifications
     commands:
+      - if [ "${USE_RELEASE_TARBALL}" = "true" ]; then cd /var/www/owncloud/testrunner/apps/notifications; fi
       - make test-acceptance-api
     when:
       matrix:
@@ -102,6 +123,7 @@ pipeline:
       - BEHAT_SUITE=${BEHAT_SUITE}
       - APPS_TO_ENABLE=notifications
     commands:
+      - if [ "${USE_RELEASE_TARBALL}" = "true" ]; then cd /var/www/owncloud/testrunner/apps/notifications; fi
       - make test-acceptance-cli
     when:
       matrix:
@@ -462,3 +484,37 @@ matrix:
       NEED_CORE: true
       NEED_INSTALL_APP: true
       NEED_SERVER: true
+
+    # Tests against latest stable release of core
+    - PHP_VERSION: 7.1
+      OC_VERSION: 10.2.0
+      TEST_SUITE: cli-acceptance
+      BEHAT_SUITE: cliNotifications
+      DB_TYPE: mysql
+      DB_NAME: owncloud
+      NEED_CORE: true
+      NEED_INSTALL_APP: true
+      NEED_SERVER: true
+      USE_RELEASE_TARBALL: true
+
+    - PHP_VERSION: 7.1
+      OC_VERSION: 10.2.0
+      TEST_SUITE: web-acceptance
+      BEHAT_SUITE: webUINotifications
+      DB_TYPE: mysql
+      DB_NAME: owncloud
+      NEED_CORE: true
+      NEED_INSTALL_APP: true
+      NEED_SERVER: true
+      USE_RELEASE_TARBALL: true
+
+    - PHP_VERSION: 7.1
+      OC_VERSION: 10.2.0
+      TEST_SUITE: api-acceptance
+      BEHAT_SUITE: apiNotifications
+      DB_TYPE: mysql
+      DB_NAME: owncloud
+      NEED_CORE: true
+      NEED_INSTALL_APP: true
+      NEED_SERVER: true
+      USE_RELEASE_TARBALL: true
