--- a/.drone.yml
+++ b/.drone.yml
@@ -497,7 +497,7 @@ steps:
 services:
 - name: oracle
   pull: always
-  image: deepdiver/docker-oracle-xe-11g:latest
+  image: owncloudci/oracle-xe:latest
   environment:
     ORACLE_DB: XE
     ORACLE_DISABLE_ASYNCH_IO: true
@@ -707,6 +707,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -743,12 +744,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -823,6 +820,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -858,12 +856,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -938,6 +932,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -958,7 +953,7 @@ steps:
 services:
 - name: oracle
   pull: always
-  image: deepdiver/docker-oracle-xe-11g:latest
+  image: owncloudci/oracle-xe:latest
   environment:
     ORACLE_DB: XE
     ORACLE_DISABLE_ASYNCH_IO: true
@@ -974,12 +969,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -1054,6 +1045,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -1091,12 +1083,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -1171,6 +1159,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -1207,12 +1196,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -1287,6 +1272,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -1307,7 +1293,7 @@ steps:
 services:
 - name: oracle
   pull: always
-  image: deepdiver/docker-oracle-xe-11g:latest
+  image: owncloudci/oracle-xe:latest
   environment:
     ORACLE_DB: XE
     ORACLE_DISABLE_ASYNCH_IO: true
@@ -1324,12 +1310,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -1404,6 +1386,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -1440,12 +1423,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -1520,6 +1499,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -1555,12 +1535,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -1635,6 +1611,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -1655,7 +1632,7 @@ steps:
 services:
 - name: oracle
   pull: always
-  image: deepdiver/docker-oracle-xe-11g:latest
+  image: owncloudci/oracle-xe:latest
   environment:
     ORACLE_DB: XE
     ORACLE_DISABLE_ASYNCH_IO: true
@@ -1671,12 +1648,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -1751,6 +1724,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -1788,12 +1762,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -1868,6 +1838,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -1904,12 +1875,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -1984,6 +1951,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -2004,7 +1972,7 @@ steps:
 services:
 - name: oracle
   pull: always
-  image: deepdiver/docker-oracle-xe-11g:latest
+  image: owncloudci/oracle-xe:latest
   environment:
     ORACLE_DB: XE
     ORACLE_DISABLE_ASYNCH_IO: true
@@ -2021,12 +1989,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -2101,6 +2065,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -2132,12 +2097,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -2212,6 +2173,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -2242,12 +2204,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -2322,6 +2280,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -2339,7 +2298,7 @@ steps:
 services:
 - name: oracle
   pull: always
-  image: deepdiver/docker-oracle-xe-11g:latest
+  image: owncloudci/oracle-xe:latest
   environment:
     ORACLE_DB: XE
     ORACLE_DISABLE_ASYNCH_IO: true
@@ -2353,12 +2312,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -2433,6 +2388,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -2464,12 +2420,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -2544,6 +2496,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -2574,12 +2527,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -2654,6 +2603,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -2671,7 +2621,7 @@ steps:
 services:
 - name: oracle
   pull: always
-  image: deepdiver/docker-oracle-xe-11g:latest
+  image: owncloudci/oracle-xe:latest
   environment:
     ORACLE_DB: XE
     ORACLE_DISABLE_ASYNCH_IO: true
@@ -2685,12 +2635,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -2765,6 +2711,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -2791,12 +2738,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -2871,6 +2814,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -2896,12 +2840,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -2976,6 +2916,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -2992,7 +2933,7 @@ steps:
 services:
 - name: oracle
   pull: always
-  image: deepdiver/docker-oracle-xe-11g:latest
+  image: owncloudci/oracle-xe:latest
   environment:
     ORACLE_DB: XE
     ORACLE_DISABLE_ASYNCH_IO: true
@@ -3002,12 +2943,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -3082,6 +3019,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -3108,12 +3046,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -3188,6 +3122,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -3213,12 +3148,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
@@ -3293,6 +3224,7 @@ steps:
   image: owncloudci/php:7.1
   commands:
   - chown -R www-data /var/www/owncloud/server
+  - wait-for-it -t 600 server:80
 
 - name: acceptance-tests
   pull: always
@@ -3309,7 +3241,7 @@ steps:
 services:
 - name: oracle
   pull: always
-  image: deepdiver/docker-oracle-xe-11g:latest
+  image: owncloudci/oracle-xe:latest
   environment:
     ORACLE_DB: XE
     ORACLE_DISABLE_ASYNCH_IO: true
@@ -3319,12 +3251,8 @@ services:
 - name: server
   pull: always
   image: owncloudci/php:7.1
-  command:
-  - /usr/local/bin/apachectl
-  - -e
-  - debug
-  - -D
-  - FOREGROUND
+  commands:
+  - /usr/local/bin/apachectl -e debug -D FOREGROUND
   environment:
     APACHE_WEBROOT: /var/www/owncloud/server
 
