--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,3 +1,6 @@
 parameters:
+  inferPrivatePropertyTypeFromConstructor: true
   bootstrap: %currentWorkingDirectory%/../../lib/base.php
+  excludes_analyse:
+    - %currentWorkingDirectory%/appinfo/Migrations/*.php
   ignoreErrors:
