--- a/l10n/.tx/config
+++ b/l10n/.tx/config
@@ -2,7 +2,7 @@
 host = https://www.transifex.com
 lang_map = ja_JP: ja
 
-[owncloud.notifications]
+[o:owncloud-org:p:owncloud:r:notifications]
 file_filter = <lang>/notifications.po
 source_file = templates/notifications.pot
 source_lang = en
